src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;
    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;
    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;
    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;
    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 10% 3.9%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem;
    --gradient-color-1: hsl(0 0% 97.3%);
    --gradient-color-2: hsl(0 0% 90.9%);
    --line-colors-gray-1: hsl(0 0% 52.3%);
    --line-colors-gray-2: hsl(0 0% 90.9%);
  }

  .dark {
    --background: 0 0% 8.5%;
    --foreground: 0 0% 98%;
    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;
    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;
    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
    --gradient-color-1: hsl(0 0% 11%);
    --gradient-color-2: hsl(0 0% 13.6%);
    --line-colors-gray-1: hsl(0 0% 49.4%);
    --line-colors-gray-2: hsl(0 0% 17.9%);
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

html {
  scroll-behavior: smooth;
}

::selection {
  background: rgb(255, 249, 168);
  color: rgb(0, 0, 0);
}

*:focus-visible {
  outline: none;
}

a {
  text-decoration: none;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes footer-animation-keyframe {
  0% {
    opacity: 0;
    transform: translate(-50%, -50%) translateY(80px);
  }
  100% {
    opacity: 1;
    transform: translate(-50%, -50%) translateY(0);
  }
}

@keyframes cryptic-list-line-after-keyframe {
  0% {
    background: transparent;
  }
  50% {
    background: var(--line-colors-gray-1);
  }
  100% {
    width: 100%;
    background: var(--line-colors-gray-2);
  }
}

@keyframes cryptic-list-line-before-keyframe {
  0% {
    background: transparent;
  }
  50% {
    background: var(--line-colors-gray-1);
  }
  100% {
    width: 100%;
    background: transparent;
  }
}

.footer-animation {
  left: 50%;
  transform: translate(-50%, -50%) translateY(80px);
  animation: footer-animation-keyframe 500ms ease 200ms 1 normal forwards;
}

.footer-item {
  cursor: pointer;
  flex-shrink: 0;
  -webkit-tap-highlight-color: transparent;
  background-image: linear-gradient(
    45deg,
    var(--gradient-color-1),
    var(--gradient-color-2),
    var(--gradient-color-1),
    var(--gradient-color-2)
  );
  background-size: 200% 100%;
  border: 0px;
  padding: 0px;
  margin: 0px;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  border-radius: 9999px;
  background-color: hsl(0 0% 13.6%);
  position: relative;
  color: hsl(0 0% 49.4%);
}

.dark .footer-item-background {
  opacity: 0.8;
  position: absolute;
  top: -1px;
  width: 100%;
  height: 100%;
  border-radius: 9999px;
  z-index: -1;
  pointer-events: none;
  user-select: none;
}

.footer-hr {
  opacity: 1;
  height: 36px;
  width: 1px;
  background: hsl(0 0% 0% / 0.114);
  border: 0px;
  flex-shrink: 0;
  mask-image: linear-gradient(
    0deg,
    transparent,
    rgb(255, 255, 255) 16px,
    rgb(255, 255, 255) calc(100% - 16px),
    transparent
  );
}

.dark .footer-hr {
  background: hsl(0 0% 100% / 0.129);
}

.while-item-tap .footer-item-label {
  opacity: 0;
}

.bottom-screen-blur {
  mask-image: linear-gradient(to top, rgb(0, 0, 0) 25%, transparent);
  backdrop-filter: blur(5px);
  width: 100%;
  height: clamp(80px, 10vh, 200px);
  bottom: 0px;
  pointer-events: none;
  position: fixed;
}

.cryptic-list-line {
  flex: 1 1 0%;
  position: relative;
}

.cryptic-list-line::before {
  content: "";
  position: absolute;
  bottom: -1px;
  height: 1px;
  width: 0px;
  z-index: 3;
  animation: cryptic-list-line-before-keyframe 1s ease var(--before-delay, 0s) 1
    normal forwards;
}

.cryptic-list-line::after {
  content: "";
  position: absolute;
  bottom: -1px;
  height: 1px;
  width: 0px;
  animation: cryptic-list-line-after-keyframe 1s ease var(--after-delay, 0s) 1
    normal forwards;
}

.top-blur {
  top: 0;
  background: linear-gradient(to top, transparent, var(--gradient-color-1));
  -webkit-mask-image: linear-gradient(
    to bottom,
    var(--gradient-color-1) 25%,
    transparent
  );
  mask-image: linear-gradient(
    to bottom,
    var(--gradient-color-1) 25%,
    transparent
  );
  position: fixed;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  width: 100%;
  left: 0;
  -webkit-backdrop-filter: blur(1px);
  backdrop-filter: blur(1px);
  will-change: transform;
  z-index: 1;
  height: 110px;
}

.blog-nav-bar {
  position: fixed;
  top: 0px;
  transform: translate(-260px, 121px);
  /* width: fit-content; */
  width: 240px;
}

.section-authors-link[data-active="true"] img {
  outline: 1px solid var(--outline-color);
  outline-offset: 2px;
}

@media (max-width: 1280px) {
  .blog-nav-bar {
    transform: translateY(120px);
    position: absolute;
    left: -120px;
  }

  .blog-nav-bar div {
    display: none;
  }
}

@media (max-width: 980px) {
  .blog-nav-bar {
    top: 0px;
    position: relative;
    transform: none;
    left: -4px;
    margin-bottom: 32px;
  }
}

/* shiki */

/* .shiki {
  background: #1c1c1c !important;
  margin-top: 0px;
  margin-bottom: 0px;
} */

.codeblock-code::before {
  content: none;
}

.codeblock-code::after {
  content: none;
}

.codeblock-code:not(pre code) {
  padding: 0.12em 0.25em;
  background-color: transparent;
  display: inline;
  border-radius: 0.375rem;
  border: 1px solid #3e3c3c;
}

.dark .codeblock-code:not(pre code) {
  background-color: #1c1c1c;
}

.codeblock-pre .codeblock-code {
  display: grid;
  background: #1c1c1c;
}

.codeblock-pre {
  background: #1c1c1c;
  padding: 12px 0;
  white-space: pre;
  overflow-x: auto;
  position: relative;
  display: block;
  text-align: left;
  word-spacing: normal;
  word-break: normal;
  line-height: 20px;

  font-size: 13px !important;
  /* tab-size: 4; */
  hyphens: none;
}

.line {
  display: block;
  padding: 0 16px;
  font-size: 13px;
  position: relative;
  height: 20px;
  /* font-family: var(--font-geist-mono); */
}

.line.highlighted::before {
  content: "";
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  border-left: 2px solid #0091ff;
  background: #1677fe22;
  color: #52a9ff;
}

.line.diff.add::before {
  content: "+";
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  padding-left: 4px;
  border-left: 2px solid #3fb9504d;
  background: #2ea04326;
  color: #16a34a;
}

.line.diff.remove::before {
  content: "-";
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  padding-left: 4px;
  border-left: 2px solid #dc2626;
  background: #f8514926;
  color: #dc2626;
}

/* Craft Page */

.craft-placeholder {
  transform: scale(1) translateZ(0);
}

.craft-card-interactive {
  cursor: pointer;
}

.craft-card-inner[data-theme="dark"] {
  color: #ededed;
}

.craft-card-inner[data-theme="light"] {
  color: #171717;
}

.craft-card-inner[data-theme="light"]::after {
  background: linear-gradient(transparent, 50%, rgba(255, 255, 255, 0.9));
}

.craft-card-inner::after {
  content: "";
  background: linear-gradient(
    to top,
    rgba(0, 0, 0, 0.9),
    50%,
    rgba(0, 0, 0, 0)
  );
  position: absolute;
  width: 100%;
  height: 200px;
  bottom: -64px;
  transition: opacity 200ms;
  pointer-events: none;
}

.craft-card-inner[data-position="top"]::after {
  bottom: unset;
  top: -64px;
  transform: rotate(180deg);
}

.craft-card-info[data-theme="light"] .craft-card-date {
  color: rgb(0 0 0 / 56%);
}

.craft-card-info[data-theme="dark"] .craft-card-date {
  color: rgba(255, 255, 255, 0.592);
}

.craft-card-info {
  bottom: 8px;
}

.craft-card-info[data-position="top"] {
  bottom: unset;
  top: 8px;
}

@media (max-width: 960px) {
  .craft-grid {
    opacity: 0;
    animation: fade 0.25s ease 0.2s forwards;
  }
}

@keyframes fade {
  100% {
    opacity: 1;
  }
}

